--- a/.github/workflows/flow-pull-request-checks-on-macos.yaml
+++ b/.github/workflows/flow-pull-request-checks-on-macos.yaml
@@ -40,12 +40,12 @@ concurrency:
 jobs:
   smoke-tests:
     name: Smoke Tests
-    runs-on: local-node-linux-medium
+    runs-on: macos-13
 
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
 
     steps:
     - name: OS safety check
