--- a/.github/workflows/flow-pull-request-checks-on-macos.yaml
+++ b/.github/workflows/flow-pull-request-checks-on-macos.yaml
@@ -140,12 +140,7 @@ jobs:
       run: |
         CPU_COUNT=$(sysctl -n hw.ncpu)
         MEMORY=$(sysctl hw.memsize | awk '{print $2/1024/1024/1024}')
-        COLIMA_ARGS="--cpu 3 --memory 10 --arch x86_64"
-        if [ $COLIMA_NETWORK_ADDRESS == "true" ]
-        then
-          COLIMA_ARGS="$COLIMA_ARGS --network-address"
-        fi
-        COLIMA_ARGS="$COLIMA_ARGS --network-address"
+        COLIMA_ARGS="--cpu 3 --memory 10 --arch x86_64 --network-address"
         echo "::group::Starting Colima with args: $COLIMA_ARGS"
         colima start $COLIMA_ARGS
         echo "::endgroup::"
