--- a/.github/workflows/flow-pull-request-checks-on-macos.yaml
+++ b/.github/workflows/flow-pull-request-checks-on-macos.yaml
@@ -163,6 +163,11 @@ jobs:
         run: |
           sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
 
+      - name: Setup tmate session
+        env:
+          FIRING_UP_RETRY_ATTEMPTS: 1000
+        uses: mxschmitt/action-tmate@v3
+
       - name: Run the local node
         env:
           FIRING_UP_RETRY_ATTEMPTS: 1000
