--- a/.github/workflows/flow-pull-request-checks-on-macos.yaml
+++ b/.github/workflows/flow-pull-request-checks-on-macos.yaml
@@ -134,7 +134,7 @@ jobs:
         run: |
           CPU_COUNT=$(sysctl -n hw.ncpu)
           MEMORY=$(sysctl hw.memsize | awk '{print $2/1024/1024/1024}')
-          COLIMA_ARGS="--cpu 3 --memory 10 --arch x86_64 --network-address"
+          COLIMA_ARGS="--cpu 3 --memory 10 --arch aarch --network-address"
           echo "::group::Starting Colima with args: $COLIMA_ARGS"
           colima start $COLIMA_ARGS
           echo "::endgroup::"
@@ -163,10 +163,10 @@ jobs:
         run: |
           sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
 
-#      - name: Setup tmate session
-#        env:
-#          FIRING_UP_RETRY_ATTEMPTS: 2000
-#        uses: mxschmitt/action-tmate@v3
+      - name: Setup tmate session
+        env:
+          FIRING_UP_RETRY_ATTEMPTS: 10000
+        uses: mxschmitt/action-tmate@v3
 
       - name: Run the local node
         env:
