--- a/.github/workflows/flow-pull-request-smoke-tests-on-macos.yaml
+++ b/.github/workflows/flow-pull-request-smoke-tests-on-macos.yaml
@@ -65,18 +65,14 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          LIMA_VERSION=$(gh release -R lima-vm/lima view --json tagName -q ".tagName")
-          curl -fsSL "https://github.com/lima-vm/lima/releases/download/${LIMA_VERSION}/lima-${LIMA_VERSION:1}-$(uname -s)-$(uname -m).tar.gz" | tar Cxzvm /usr/local
-          echo "https://github.com/lima-vm/lima/releases/download/${LIMA_VERSION}/lima-${LIMA_VERSION:1}-$(uname -s)-$(uname -m).tar.gz"
+          curl -fsSL "https://github.com/lima-vm/lima/releases/download/v1.0.1/lima-1.0.1-$(uname -s)-$(uname -m).tar.gz" | tar Cxzvm /usr/local
         shell: bash
 
       - name: Install Colima
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          COLIMA_VERSION=$(gh release -R abiosoft/colima view --json tagName -q ".tagName")
-          echo "$COLIMA_VERSION"
-          curl -LO https://github.com/abiosoft/colima/releases/download/${COLIMA_VERSION}/colima-$(uname)-$(uname -m)
+          curl -LO https://github.com/abiosoft/colima/releases/download/v0.8.0/colima-$(uname)-$(uname -m)
           install colima-$(uname)-$(uname -m) /usr/local/bin/colima
         shell: bash
 
